testcrate/ui/bad-return-type.stderr
error[E0308]: mismatched types
 --> $DIR/bad-return-type.rs:7:1
  |
7 | #[async]
  | ^^^^^^^^ expected enum `std::option::Option`, found integral variable
  |
  = note: expected type `std::result::Result<std::option::Option<_>, _>`
             found type `std::result::Result<{integer}, _>`

error[E0308]: mismatched types
  --> $DIR/bad-return-type.rs:25:5
   |
25 |     stream_yield!(val);
   |     ^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected enum `std::option::Option`, found integral variable
   |     help: try using a variant of the expected type: `Some(e)`
   |
   = note: expected type `std::option::Option<_>`
              found type `{integer}`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/bad-return-type.rs:29:1
   |
29 | #[async]
   | ^^^^^^^^ expected integral variable, found tuple
   |
   = note: expected type `std::result::Result<{integer}, _>`
              found type `std::result::Result<({integer}, {integer}), _>`

error[E0271]: type mismatch resolving `<futures::__rt::GenFuture<futures::__rt::Mu, [generator@$DIR/bad-return-type.rs:29:1: 35:2 _]> as futures::Future>::Item == (i32, i32)`
  --> $DIR/bad-return-type.rs:30:15
   |
30 | fn tuple() -> impl Future<Item=(i32, i32), Error=()> {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected integral variable, found tuple
   |
   = note: expected type `{integer}`
              found type `(i32, i32)`
   = note: the return type of a function must have a statically known size

error: aborting due to 4 previous errors

